WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276561
[JSC] Throw an exception if jitCompileSIMDFunction failed
https://bugs.webkit.org/show_bug.cgi?id=276561
Summary
[JSC] Throw an exception if jitCompileSIMDFunction failed
Yijia Huang
Reported
2024-07-12 16:21:03 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2024-07-12 16:21:28 PDT
<
rdar://131444053
>
Yijia Huang
Comment 2
2024-07-12 16:26:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30772
EWS
Comment 3
2024-07-12 21:27:46 PDT
Committed
280936@main
(d4e98ff75842): <
https://commits.webkit.org/280936@main
> Reviewed commits have been landed. Closing PR #30772 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug