[JSC] Throw an exception if jitCompileSIMDFunction failed https://bugs.webkit.org/show_bug.cgi?id=276561 rdar://131444053

Reviewed by Keith Miller and Yusuke Suzuki.

If jitCompileSIMDFunction failed, we would get a release
assertion failure. Let's throw an exception in that case.

* Source/JavaScriptCore/wasm/WasmBBQPlan.cpp:
(JSC::Wasm::BBQPlan::work):
* Source/JavaScriptCore/wasm/WasmExceptionType.h:
(JSC::Wasm::isTypeErrorExceptionType):
* Source/JavaScriptCore/wasm/WasmOMGPlan.cpp:
(JSC::Wasm::OMGPlan::work):
* Source/JavaScriptCore/wasm/WasmPlan.cpp:
(JSC::Wasm::Plan::fail):
* Source/JavaScriptCore/wasm/WasmPlan.h:
(JSC::Wasm::Plan::error const):
* Source/JavaScriptCore/wasm/WasmSlowPaths.cpp:
(JSC::LLInt::jitCompileSIMDFunction):
(JSC::LLInt::WASM_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/280936@main