Source/JavaScriptCore/wasm/WasmPlan.cpp
@@ -113,13 +113,14 @@ bool Plan::tryRemoveContextAndCancelIfLast(VM& vm)
     return false;
 }
 
-void Plan::fail(String&& errorMessage)
+void Plan::fail(String&& errorMessage, Error error)
 {
     if (failed())
         return;
     ASSERT(errorMessage);
     dataLogLnIf(WasmPlanInternal::verbose, "failing with message: ", errorMessage);
     m_errorMessage = WTFMove(errorMessage);
+    m_error = error;
     complete();
 }
 
