Source/JavaScriptCore/wasm/WasmSlowPaths.cpp
@@ -174,14 +174,14 @@ static inline bool jitCompileAndSetHeuristics(Wasm::LLIntCallee* callee, Wasm::I
     return !!callee->replacement(memoryMode);
 }
 
-static inline bool jitCompileSIMDFunction(Wasm::LLIntCallee* callee, Wasm::Instance* instance)
+static inline std::optional<Wasm::Plan::Error> jitCompileSIMDFunction(Wasm::LLIntCallee* callee, Wasm::Instance* instance)
 {
     Wasm::LLIntTierUpCounter& tierUpCounter = callee->tierUpCounter();
 
     MemoryMode memoryMode = instance->memory()->mode();
     if (callee->replacement(memoryMode))  {
         dataLogLnIf(Options::verboseOSR(), "    SIMD code was already compiled.");
-        return true;
+        return std::nullopt;
     }
 
     bool compile = false;
@@ -197,7 +197,7 @@ static inline bool jitCompileSIMDFunction(Wasm::LLIntCallee* callee, Wasm::Insta
             continue;
         case Wasm::LLIntTierUpCounter::CompilationStatus::Compiled:
             RELEASE_ASSERT(!!callee->replacement(memoryMode));
-            return true;
+            return std::nullopt;
         }
     }
 
@@ -213,12 +213,14 @@ static inline bool jitCompileSIMDFunction(Wasm::LLIntCallee* callee, Wasm::Insta
 
     Wasm::ensureWorklist().enqueue(*plan);
     plan->waitForCompletion();
+    if (plan->failed())
+        return plan->error();
 
-        Locker locker { tierUpCounter.m_lock };
-        RELEASE_ASSERT(tierUpCounter.compilationStatus(memoryMode) == Wasm::LLIntTierUpCounter::CompilationStatus::Compiled);
-        RELEASE_ASSERT(!!callee->replacement(memoryMode));
+    Locker locker { tierUpCounter.m_lock };
+    RELEASE_ASSERT(tierUpCounter.compilationStatus(memoryMode) == Wasm::LLIntTierUpCounter::CompilationStatus::Compiled);
+    RELEASE_ASSERT(!!callee->replacement(memoryMode));
 
-    return true;
+    return std::nullopt;
 }
 
 WASM_SLOW_PATH_DECL(prologue_osr)
@@ -395,7 +397,15 @@ WASM_SLOW_PATH_DECL(simd_go_straight_to_bbq_osr)
 
     dataLogLnIf(Options::verboseOSR(), *callee, ": Entered simd_go_straight_to_bbq_osr with tierUpCounter = ", callee->tierUpCounter());
 
-    RELEASE_ASSERT(jitCompileSIMDFunction(callee, instance));
+    auto result = jitCompileSIMDFunction(callee, instance);
+    if (result.has_value()) {
+        switch (result.value()) {
+        case Wasm::Plan::Error::OutOfMemory:
+            WASM_THROW(Wasm::ExceptionType::OutOfMemory);
+        default:
+            RELEASE_ASSERT_NOT_REACHED();
+        }
+    }
     WASM_RETURN_TWO(callee->replacement(instance->memory()->mode())->entrypoint().taggedPtr(), nullptr);
 }
 #endif
